Fix: Stabilize marketplace installs and server runtime handling
- Scope marketplace search to one provider with Hangar as the default
- Handle Geyser Modrinth plugin metadata and compatible download fallback
- Add app error reporting for silent startup/runtime failures
- Batch console log rendering and harden join listener handling
- Document completed marketplace and server crash fixes